// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingButton renders correctly 1`] = `
.c0 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  width: 100%;
  height: 50px;
  margin: auto;
  display: block;
}

.c0:hover {
  opacity: 0.90;
}

.c0:focus {
  outline: none;
}

.c0:active {
  opacity: 0.80;
}

<button
  className="c0"
  onClick={[MockFunction]}
/>
`;

exports[`LoadingButton shows loading indicator 1`] = `
.c1 {
  height: 25px;
  -webkit-animation: fvtopB 1.5s infinite linear;
  animation: fvtopB 1.5s infinite linear;
}

.c0 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  width: 100%;
  height: 50px;
  margin: auto;
  display: block;
}

.c0:hover {
  opacity: 0.90;
}

.c0:focus {
  outline: none;
}

.c0:active {
  opacity: 0.80;
}

<button
  className="c0"
  onClick={[MockFunction]}
>
  <img
    className="c1"
    src={[Function]}
  />
</button>
`;
